--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #f8f7f7;
 }
 
 header.welcome-section {
     height: 100vh; /* Makes the welcome section cover the full viewport height */
-    background-image: url('bakery-background.jpg'); /* Replace with your image */
+    background-image: url('Untitled design (4).jpg'); /* Replace with your image */
     background-size: cover;
     background-position: center;
-    color: #fff;
+    color: #0b0b0b;
     text-align: center;
     display: flex;
     flex-direction: column;
