--- a/styles.css
+++ b/styles.css
@@ -59,25 +59,25 @@ nav ul li a:hover {
 }
 
 .menu-section {
-    background-color: #f7f7f7;
-    color: #333;
+    background-color: #70391f;
+    color: #fff;
 }
 
 .about-section {
     background-color: #fff;
-    color: #333;
+    color: #70391f;
 }
 
 .contact-section {
-    background-color: #f3f3f3;
-    color: #333;
+    background-color: #70391f;
+    color: #fff;
 }
 
 /* Footer */
 footer {
     text-align: center;
-    background-color: #333;
-    color: #fff;
+    background-color:#fff;
+    color: #70391f;
     padding: 20px 0; /* Padding for better spacing */
     position: relative; /* Changed from fixed to relative */
     width: 100%;
@@ -139,17 +139,95 @@ footer {
 
 
 /* Menu Items */
-.menu-item {
-    margin-bottom: 20px;
-    padding: 15px; /* Increased padding */
-    background-color: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 6px; /* Slightly rounded corners */
-    transition: box-shadow 0.3s ease; /* Smooth transition for shadow effect */
+
+.menu-section {
+    padding: 60px 20px;
+    text-align: center;
+    background-color: #7d5441;
 }
 
-.menu-item:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow on hover */
+.menu-item {
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #70391f;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.menu-item img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.menu-item h3 {
+    margin-top: 0;
+    font-size: 1.5em;
+}
+
+.menu-item p {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+.menu-item label {
+    display: block;
+    margin-top: 10px;
+    font-size: 1em;
+}
+
+.menu-item select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    background-color: #7d5441;
+    cursor: pointer;
+}
+
+.menu-item input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+    color: #70391f;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #7d5441;
+}
+
+.cart-popup {
+    padding: 15px;
+    border: 2px solid #333;
+    background-color: #f9f9f9;
+    color: #333;
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto 0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: none; /* Hidden by default */
+}
+
+footer {
+    text-align: center;
+    background-color: #fff;
+    color: #70391f;
+    padding: 10px 0;
+    position: relative;
+}
+
+
 
